--- a/server/app/views/planning/termly/termlyPlansSelectOverallCurriculumAreasForTheTerm.scala.html
+++ b/server/app/views/planning/termly/termlyPlansSelectOverallCurriculumAreasForTheTerm.scala.html
@@ -72,8 +72,8 @@
                             @if(area.niceHeaderValueIfPresent().getOrElse("NONE") == "Health And Wellbeing" || area.niceValue() == "Health And Wellbeing") {
                                 <div class="col">
                                     <div class="form-group">
-                                        <div class="custom-control custom-checkbox" data-toggle="tooltip" data-placement="top" title="These Es&Os/Benchmarks not in the database yet">
-                                            <input id="@area.value.toString" name="@area.value.toString" type="checkbox" class="custom-control-input" value="On" disabled>
+                                        <div class="custom-control custom-checkbox">
+                                            <input id="@area.value.toString" name="@area.value.toString" type="checkbox" class="custom-control-input" value="On">
                                             <input name="@area.value.toString" type="hidden" value="Off">
                                             <label class="custom-control-label" for="@area.value.toString">
                                             @if(area.isCompositeValue) {
@@ -113,8 +113,8 @@
                                                     }
                                                 </div>
                                             }else {
-                                                <div class="custom-control custom-checkbox" data-toggle="tooltip" data-placement="top" title="These Es&Os/Benchmarks not in the database yet">
-                                                    <input id="@area.value.toString" name="@area.value.toString" type="checkbox" class="custom-control-input" value="On" disabled>
+                                                <div class="custom-control custom-checkbox">
+                                                    <input id="@area.value.toString" name="@area.value.toString" type="checkbox" class="custom-control-input" value="On">
                                                     <input name="@area.value.toString" type="hidden" value="Off">
                                                     <label class="custom-control-label" for="@area.value.toString">
                                                     @if(area.isCompositeValue) {
@@ -167,8 +167,8 @@
                             @if(area.isCompositeValue && area.niceHeaderValueIfPresent().getOrElse("NONE") == "RME") {
                                 <div class="col">
                                     <div class="form-group">
-                                        <label class="custom-control custom-checkbox" data-toggle="tooltip" data-placement="top" title="These Es&Os/Benchmarks not in the database yet">
-                                            <input id="@area.value.toString" name="@area.value.toString" type="checkbox" class="custom-control-input" value="On" disabled>
+                                        <label class="custom-control custom-checkbox">
+                                            <input id="@area.value.toString" name="@area.value.toString" type="checkbox" class="custom-control-input" value="On">
                                             <input name="@area.value.toString" type="hidden" value="Off">
                                             <label class="custom-control-label" for="@area.value.toString">
                                             @if(area.isCompositeValue) {
