--- a/server/app/views/timetoteachAppMain.scala.html
+++ b/server/app/views/timetoteachAppMain.scala.html
@@ -455,11 +455,13 @@
 
 
 
-            <div class="row d-flex justify-content-around">
-                <a id="download-termly-plan-pdf" class="btn btn btn-danger" role="button" target="_blank"
-                href="@controllers.planning.termly.routes.DownloadPdfController.downloadClassPdf(maybeClassDetails.get.id.id)">
-                    Create Termly Plan PDF</a>
-            </div>
+            @if(maybeClassDetails.isDefined) {
+                <div class="row d-flex justify-content-around">
+                    <a id="download-termly-plan-pdf" class="btn btn btn-danger" role="button" target="_blank"
+                    href="@controllers.planning.termly.routes.DownloadPdfController.downloadClassPdf(maybeClassDetails.get.id.id)">
+                        Create Termly Plan PDF</a>
+                </div>
+            }
 
 
             <div id="mainAppTopMargin"></div>
